@@ -53,6 +53,7 @@
             "Test::NoTabs" : "0",
             "Test::Perl::Critic" : "0",
             "Test::Pod" : "1.26",
+            "Test::Pod::LinkCheck" : "0",
             "Test::Pod::No404s" : "0",
             "Test::Portability::Files" : "0",
             "Test::Spelling" : "0.12",
@@ -251,6 +252,7 @@
          "Test::NoTabs" : "2.00",
          "Test::Perl::Critic" : "1.03",
          "Test::Pod" : "1.51",
+         "Test::Pod::LinkCheck" : "0.008",
          "Test::Pod::No404s" : "0.02",
          "Test::Portability::Files" : "0.07",
          "Test::Spelling" : "0.20",
@@ -417,6 +419,7 @@
                      "xt/author/minimum_version.t",
                      "xt/author/mojibake.t",
                      "xt/author/no-tabs.t",
+                     "xt/author/pod-linkcheck.t",
                      "xt/author/pod-no404s.t",
                      "xt/author/pod-spell.t",
                      "xt/author/pod-syntax.t",
@@ -782,6 +785,7 @@
                      "xt/author/minimum_version.t",
                      "xt/author/mojibake.t",
                      "xt/author/no-tabs.t",
+                     "xt/author/pod-linkcheck.t",
                      "xt/author/pod-no404s.t",
                      "xt/author/pod-spell.t",
                      "xt/author/pod-syntax.t",
